src/test/testFiles/invalid/semanticErrors/incorrectArgNumForFunctionCall.manimdsl
fun function(number x, number y): number {
    let z: number = x + x;
    return z;
}

let z = function(5);